# codemem

./: .gitignore  PLAN.md  README.md  pyproject.toml
md/: 01_memgpt.md  02_mem0.md  03_amem.md  04_agemem.md  05_mem_alpha.md  06_memskill.md  07_memory_r1.md  08_lightmem.md  09_mem1.md  10_mem_t.md  11_remem.md  12_survey.md
src/codemem/: __init__.py  config.py
src/codemem/agent/: orchestrator.py  tools.py
src/codemem/cli/: main.py  repl.py
src/codemem/memory/: compressor.py  evolution.py  extractor.py  manager.py  models.py  stores.py
tests/: test_memory.py  test_tools.py
